
- [FIX] SC.Record#matchCondition() did not behave correctly when comparing record instances.  Fix by onitunes includes both a faster comparison method along with correct behavior + kickin' unit tests

- [FIX] some settings on the inline editor for multi-line edits were wrong.  Now fixed thanks to maloninc (#38)

== sproutcore 0.9.11

- [FIX] innerFrame tests were failing.  Now working.

- Progress bar now shows 100% fill when set to indeterminate.  This should 
  make it easier to style an indeterminate appearance.
  
- Changed all references for window.location= to window.location.href=.  
  Improves IE compatibility.
  
- Cleaned JSLink warnings from animator.js

- Removed stray debugger statements (thanks august!)

- Fixed CSS issues with SC-theme that made buttons appear offset.  Now appears   
  correct in FF3 & Safari (thanks mde!)

- Added detect-browser script which can be included at the top of your page to 
  detect the current browser and platform.  Also includes an 
  SC.setupBodyClassNames method that you can call after the body tag has been
  declared that will add class names for the current browser and platform. 
 
- Added documentation for Function.property()
- Added documentation for SC.Error.
- Added documentation for SC.SegmentedView

== sproutcore-0.9.10

- SC.Platform.Firefox now returns 2 for any gecko browser that is not Firefox.

- set() and a variety of other methods now returns this instead of the set
value.  This makes it possible to do method chaining.

- Fixed typo in ().  Fixes #12

- Fixed #11

- Switch from transitional to strict DTD

- Replacement of window.location to window.location.href.

- Added default src to image_view (static_url('blank'))

- Fix  for view_helper view that was closing the element.

- sproutcore now treats space as a printable key instead of a function key.
    
- Added chainability to observer methods; improved docs
    
    set(), beginPropertyChanges(), endPropertyChanges() and a whole slew of other