@@ -1,4 +1,6 @@
 
+- [FIX] SC.Timer now computes the next fire time before it executes your callback action.  This should avoid the situation where a timer would call your action, which would then take it past the last time it should fire and hence the last fire would never happen.
+
 - [FIX] SC.Record#matchCondition() did not behave correctly when comparing record instances.  Fix by onitunes includes both a faster comparison method along with correct behavior + kickin' unit tests
 
 - [FIX] some settings on the inline editor for multi-line edits were wrong.  Now fixed thanks to maloninc (#38)
